<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".FusionHubSettings">

    <TextView
        android:id="@+id/header_tw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header_tw"
        android:textSize="24sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <TextView
        android:id="@+id/server_address_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/server_address_label" />

    <EditText
        android:id="@+id/server_address_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/server_address_hint"
        android:imeOptions="actionDone"
        android:inputType="textUri"
        android:maxLines="1"
        android:minHeight="48dp"
        android:singleLine="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <TextView
        android:id="@+id/anime_priority_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anime_priority_label" />

    <Spinner
        android:id="@+id/anime_priority_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <Button
        android:id="@+id/save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_btn"
        android:textAllCaps="false" />
</LinearLayout>
